--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Orbitron');
 
+html{
+  background-image: url('bg.jpg');
+  background-position: center center;
+  background-size: cover;
+}
+
 .main{
   text-align: center;
   position: relative;
@@ -8,17 +14,17 @@
 
 .calculator{
   display: inline-block;
-  border: 10px solid #434343;
+  border: 10px solid #2a1313;
   background-color: #2a1313;
   border-radius: 5px;
-  box-shadow: 0px 0px 40px;
+  box-shadow: 0px 0px 50px;
 }
 
 .screen{
   border: 2px solid #434343;
   display: inline-block;
   background-color: #434343;
-  width: 90%;
+  width: 93%;
   height: 80px;
   margin-top: 20px;
   font-size: 30px;
@@ -70,7 +76,7 @@
 }
 
 .button{
-  font-size: 25px;
+  font-size: 22px;
   font-family: 'Orbitron', sans-serif;
   width: 15px;
   height: 25px;
@@ -93,4 +99,8 @@
 
 .equals{
   width: 6px;
+}
+
+.equals:hover{
+  background-color: #2197ff;
 }
